<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/background"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/panel_4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignTop="@+id/panel_2"

        android:layout_alignParentEnd="true"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/panel_0"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/panel_4"

        android:layout_toStartOf="@+id/panel_4"
        android:background="@drawable/border" />

    <Button
        android:id="@+id/panel_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="129dp"

        android:layout_toStartOf="@id/panel_4"
        android:background="@drawable/border" />

    <Button
        android:id="@+id/panel_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/panel_3"

        android:layout_alignBottom="@+id/panel_1"
        android:background="@drawable/border" />

    <Button
        android:id="@+id/panel_3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignEnd="@id/panel_1"
        android:layout_alignBottom="@id/panel_4"
        android:background="@drawable/border" />

    <LinearLayout
        android:id="@+id/linear_text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panel_0"
        android:layout_alignStart="@+id/panel_2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="95dp"
        android:gravity="start|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/hr_lin_horiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/hour"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/redHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/redhour"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/hr_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/plus"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/blueCommon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/bluecommon"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/hr_eq"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_mar"
                android:backgroundTintMode="add"
                android:gravity="center_vertical"
                android:text="@string/eq"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                android:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/hr_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/hr_result"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/minute"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/greenMin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="@string/greenmin"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/min_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/plus"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/blueCommonMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/bluecommon"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/min_eq"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_mar"
                android:backgroundTintMode="add"
                android:gravity="center_vertical"
                android:text="@string/eq"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                android:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/min_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/hr_result"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/min_mult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_mar"
                android:backgroundTintMode="add"
                android:gravity="center_vertical"
                android:text="@string/mult"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:tint="@color/colorWhite" />
            <TextView
                android:id="@+id/min_eq2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_mar"
                android:backgroundTintMode="add"
                android:gravity="center_vertical"
                android:text="@string/eq"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                android:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/min_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_mar"
                android:text="@string/total"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>